--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A website includes my contact information, portfolios and career path",
   "main": "index.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "firebase": "^8.6.1",
