--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "serve": "webpack serve --config webpack.config.js --progress",
