Replace shopping-cart with food-delivery url

--- a/src/assets/json/portfolio.config.json
+++ b/src/assets/json/portfolio.config.json
@@ -12,7 +12,7 @@
       "imageTitle": "Screenshot",
       "title": "Shopping Cart Practice",
       "description": "The website demonstrates basic usage of ordering, cart checking and history orders checking, for simulating food delivery platform.",
-      "url": "https://shopping-cart-4a2be.firebaseapp.com/"
+      "url": "https://food-delivery-platform-93568.web.app/"
     },
     {
       "imageSrc": "images/mean-shift.png",
@@ -33,7 +33,7 @@
       "imageTitle": "Screenshot",
       "title": "Shopping Cart Practice",
       "description": "The website demonstrates basic usage of ordering, cart checking and history orders checking, for simulating food delivery platform.",
-      "url": "https://shopping-cart-4a2be.firebaseapp.com/"
+      "url": "https://food-delivery-platform-93568.web.app/"
     },
     {
       "imageSrc": "images/mean-shift.png",
@@ -54,7 +54,7 @@
       "imageTitle": "Screenshot",
       "title": "Shopping Cart Practice",
       "description": "The website demonstrates basic usage of ordering, cart checking and history orders checking, for simulating food delivery platform.",
-      "url": "https://shopping-cart-4a2be.firebaseapp.com/"
+      "url": "https://food-delivery-platform-93568.web.app/"
     },
     {
       "imageSrc": "images/mean-shift.png",
