--- a/src/assets/json/portfolio.config.json
+++ b/src/assets/json/portfolio.config.json
@@ -12,7 +12,7 @@
       "imageTitle": "Screenshot",
       "title": "Food Delivery System",
       "description": "The website demonstrates basic usage of ordering, cart checking and history orders checking, for simulating food delivery platform.",
-      "url": "https://food-delivery-platform-93568.web.app/storelist"
+      "url": "https://food-delivery-platform-93568.web.app/"
     },
     {
       "imageSrc": "mean-shift.png",
